--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -1,3 +1,5 @@
+omitCategoryOnMenu = false
+categoryName = "หมวดหมู่"
 # disableCodeCopyButton = false
 # disableToTop = false
 # disableHightlight = false
