--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -15,7 +15,7 @@ categoryName = "หมวดหมู่"
   noFavicon = false
 
   # modern SVG favicon to use in place of older style .png and .ico files
-  svgFavicon = "/safari-pinned-tab.svg" # "/favicon.svg"
+  svgFavicon = "/apple-touch-icon.png" # "/favicon.svg"
 
   # Safari mask icon color
   iconColor = "#ffffff"
@@ -34,13 +34,13 @@ categoryName = "หมวดหมู่"
 [logo]
   # Image logo or Text logo
   # Recommended to set image as logo. (prefer)
-  img = "/safari-pinned-tab.svg" # "/images/logo.svg"
-  img_dark = "/safari-pinned-tab.svg" # "/images/logo-footer.svg"
+  img = "/apple-touch-icon.png" # "/images/logo.svg"
+  img_dark = "/apple-touch-icon.png" # "/images/logo-footer.svg"
 
   # Max height not greater than 56 (px). default: 56 (px)
   customLogoHeight = "56"
-  customLogoWidth = "120"
-  text = ""
+  customLogoWidth = "56" # "120"
+  text = "Attajak Janrak"
 
 [home]
   # Customize the type of content to display up-to-date, 
@@ -63,7 +63,7 @@ categoryName = "หมวดหมู่"
 #    QRCodeUrl = "/images/society/wechat/wechat.jpg"
 
 [copyright]
-  owner = "attajak"
+  owner = "attajak <https://github.com/attajak/>"
   startYear = "2024"
 
 [articleMeta]
